Thu Dec 23 15:40:36 CET 2010
	Increasing nonce length to 128 to support digest authentication
	with Opera (see #1633).

Mon Dec 20 21:22:57 CET 2010
	Added macro MHD_LONG_LONG to allow change of MHD's "long long" use
	to some other type on platforms that do not support "long long"
	(Mantis #1631). -CG/bplant

Sun Dec 19 19:54:15 CET 2010
	Added 'MHD_create_response_from_fd_at_offset'. -CG

Sun Dec 19 15:16:16 CET 2010
	Fixing --enable and --disable configure options to behave properly. -CG

Sun Dec 19 13:46:52 CET 2010
	Added option to specify size of stacks for threads created by MHD. -CG

Tue Nov 23 09:41:00 CET 2010
	Releasing libmicrohttpd 0.9.3. -CG

Thu Nov 18 23:10:36 CET 2010
	Fixing #1619 (testcases not working with NSS on Fedora). -CG/timn

Thu Nov 18 22:55:58 CET 2010
	Fixing #1621 (socket not closed under certain circumstances). -CG/jaredc

Wed Nov 17 12:16:53 CET 2010
	Allowing signalling of errors in generating chunked responses to
	clients (by closing connectins) using the new
	MHD_CONTENT_READER_END_WITH_ERROR ((size_t)-2) return value.  Also
	introducing MHD_CONTENT_READER_END_OF_STREAM constant instead
	of (size_t) -1 / SIZE_MAX.

Sun Nov 14 20:45:45 CET 2010
	Adding API call to generate HTTP footers in response. -CG

Sat Oct 16 12:38:43 CEST 2010
	Releasing libmicrohttpd 0.9.2. -CG

Tue Oct 12 15:41:51 CEST 2010
	Fixed issue with data received via SSL being delayed in the
	GNUtls buffer if sender stopped transmitting (but did not close
	the connection) and MHD buffer size was smaller than last fragment,
	resulting in possibly significantly delayed processing of
	incoming data.  -CG

Wed Sep 22 09:48:59 CEST 2010
	Changed port argument from 'unsigned short' to 'uint16_t'.
	Removed dead code when compiling with messages enabled.
	Minimal unrelated code cleanup. -CG

Tue Sep 21 15:12:41 CEST 2010
	Use "size_t" for buffer size instead of "int". -CG

Sat Sep 18 07:16:30 CEST 2010
	Adding support for SHOUTcast. -CG

Wed Sep 15 09:33:46 CEST 2010